<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#b9d23c"> <!-- Fundo verde -->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <!-- Campo Nome -->
    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/nome_hint"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <!-- Campo Email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginTop="16dp" />

    <!-- Campo Senha -->
    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/senha_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginTop="16dp" />

    <!-- Botão Registrar -->
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:backgroundTint="#edae56" /> <!-- Cor do botão -->

</LinearLayout>
