<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#b9d23c"> <!-- Fundo verde -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuracoes"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Switch
            android:id="@+id/switchNotificacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/notificacoes"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Switch
            android:id="@+id/switchTemaEscuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/tema_escuro"
            android:layout_marginBottom="32dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSalvarConfiguracoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar_configuracoes"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#edae56" /> <!-- Cor do botão -->

</LinearLayout>
